--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^18.0.4",
-    "react": "16.0.0-alpha.12",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-18.0.1.tar.gz",
-    "react-navigation": "^1.0.0-beta.11",
-    "@expo/samples": "~1.0.4"
+    "@expo/samples": "~1.0.4",
+    "expo": "^23.0.0",
+    "firebase": "^4.6.2",
+    "react": "16.0.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-23.0.0.tar.gz",
+    "react-navigation": "^1.0.0-beta.19",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "jest-expo": "~18.0.0"
+    "jest-expo": "^23.0.0"
   }
 }
