--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   },
   "dependencies": {
     "@expo/samples": "~1.0.4",
-    "expo": "^23.0.0",
+    "babel-plugin-transform-remove-console": "^6.9.0",
+    "expo": "^25.0.0",
     "firebase": "^4.6.2",
-    "react": "16.0.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-23.0.0.tar.gz",
-    "react-navigation": "^1.0.0-beta.19",
+    "react": "16.2.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
+    "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "jest-expo": "^23.0.0"
+    "jest-expo": "^25.0.0"
   }
 }
